Agentforce/force-app/main/default/objects/Contact/fields/Account_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Role__c</fullName>
    <label>Account Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Gatekeeper</fullName>
            </value>
            <value>
                <fullName>Blocker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>