Agentforce/force-app/main/default/objects/Contact/fields/AccountCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>AccountCaseSafeID__c</fullName>
    <formula>CASESAFEID(AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountCaseSafeID</label>
    <type>Text</type>
</CustomField>