Agentforce/force-app/main/default/objects/Contact/fields/Asknicely__c.field-meta.xml
<CustomField>
    <fullName>Asknicely__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asknicely</label>
    <type>Checkbox</type>
</CustomField>