Agentforce/force-app/main/default/objects/Contact/fields/asknicely__CSAT_Last_Responded__c.field-meta.xml
<CustomField>
    <fullName>asknicely__CSAT_Last_Responded__c</fullName>
    <label>CSAT Last Responded</label>
    <type>DateTime</type>
</CustomField>