Agentforce/force-app/main/default/objects/Contact/fields/asknicely__FIVESTAR_Last_Responded__c.field-meta.xml
<CustomField>
    <fullName>asknicely__FIVESTAR_Last_Responded__c</fullName>
    <label>Five Star Last Responded</label>
    <type>DateTime</type>
</CustomField>