Agentforce/force-app/main/default/objects/Contact/fields/asknicely__FIVESTAR_Type__c.field-meta.xml
<CustomField>
    <fullName>asknicely__FIVESTAR_Type__c</fullName>
    <label>Five Star Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Unsatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>