Agentforce/force-app/main/default/objects/Contact/fields/asknicely__nps_comment__c.field-meta.xml
<CustomField>
    <fullName>asknicely__nps_comment__c</fullName>
    <description>The last comment from this customer</description>
    <label>NPS Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>