Agentforce/force-app/main/default/objects/Contact/fields/asknicely__NPS_Last_Responded__c.field-meta.xml
<CustomField>
    <fullName>asknicely__NPS_Last_Responded__c</fullName>
    <label>NPS Last Responded</label>
    <type>DateTime</type>
</CustomField>