Agentforce/force-app/main/default/objects/Contact/fields/AskNicely_Consent_Requested__c.field-meta.xml
<CustomField>
    <fullName>AskNicely_Consent_Requested__c</fullName>
    <description>Date the Contact was sent an email for AskNicely NPS Consent</description>
    <label>AskNicely Consent Requested</label>
    <type>Date</type>
</CustomField>