Agentforce/force-app/main/default/objects/Contact/fields/asknicely_csat_comment__c.field-meta.xml
<CustomField>
    <fullName>asknicely_csat_comment__c</fullName>
    <label>CSAT Comment</label>
    <type>TextArea</type>
</CustomField>