Agentforce/force-app/main/default/objects/Contact/fields/asknicely_CSAT_SurveyTag__c.field-meta.xml
<CustomField>
    <fullName>asknicely_CSAT_SurveyTag__c</fullName>
    <label>CSAT Survey Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>