Agentforce/force-app/main/default/objects/Contact/fields/asknicely_fivestar_comment__c.field-meta.xml
<CustomField>
    <fullName>asknicely_fivestar_comment__c</fullName>
    <label>Five Star Comment</label>
    <type>TextArea</type>
</CustomField>