Agentforce/force-app/main/default/objects/Contact/fields/asknicely_nps_comment__c.field-meta.xml
<CustomField>
    <fullName>asknicely_nps_comment__c</fullName>
    <label>NPS Comment</label>
    <type>TextArea</type>
</CustomField>