Agentforce/force-app/main/default/objects/Contact/fields/AskNicely_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>AskNicely_Opt_Out__c</fullName>
    <description>Date the Contact Opted Out of AskNicely</description>
    <label>AskNicely Opt Out</label>
    <type>Date</type>
</CustomField>