Agentforce/force-app/main/default/objects/Contact/fields/AskNicely_Opt_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>AskNicely_Opt_Out_Reason__c</fullName>
    <description>Reason the Contact has opted out of the AskNicely NPS</description>
    <label>AskNicely Opt Out Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No longer the appropriate contact</fullName>
            </value>
            <value>
                <fullName>Change in role or responsibilities</fullName>
            </value>
            <value>
                <fullName>Leaving the organisation</fullName>
            </value>
            <value>
                <fullName>New contact manages the service relationship</fullName>
            </value>
            <value>
                <fullName>New contact will provide the feedback</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>