Agentforce/force-app/main/default/objects/Contact/fields/Assigned_Marketing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Marketing_Unit__c</fullName>
    <description>AD - 628 - Used to define which leads, contacts and opportunities sync with each BU via Marketing Data Sharing rules</description>
    <label>Assigned Marketing Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assigned_Marketing_Unit</valueSetName>
    </valueSet>
</CustomField>