Agentforce/force-app/main/default/objects/Contact/fields/Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Date__c</fullName>
    <label>Consent Date</label>
    <type>DateTime</type>
</CustomField>