Agentforce/force-app/main/default/objects/Contact/fields/Contact_New_ID_Merge__c.field-meta.xml
<CustomField>
    <fullName>Contact_New_ID_Merge__c</fullName>
    <label>Contact New ID Merge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>