Agentforce/force-app/main/default/objects/Contact/fields/Contact_NPS_Comments__c.field-meta.xml
<CustomField>
    <fullName>Contact_NPS_Comments__c</fullName>
    <description>AD-916: NPS Survey Form</description>
    <label>Contact NPS Comments</label>
    <length>65535</length>
    <type>LongTextArea</type>
</CustomField>