Agentforce/force-app/main/default/objects/Contact/fields/Contact_NPS_No_Response__c.field-meta.xml
<CustomField>
    <fullName>Contact_NPS_No_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-181 - Denotes that there has been no response to an NPS Survey sent via Pardot</description>
    <label>Contact NPS No Response</label>
    <type>Checkbox</type>
</CustomField>