Agentforce/force-app/main/default/objects/Contact/fields/Contact_NPS_received__c.field-meta.xml
<CustomField>
    <fullName>Contact_NPS_received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-916: NPS Survey Form</description>
    <label>Contact NPS received</label>
    <type>Checkbox</type>
</CustomField>