Agentforce/force-app/main/default/objects/Contact/fields/Contact_NPS_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_NPS_Received_Date__c</fullName>
    <description>AD-916 - used as part ofr the NPS Survey Form process</description>
    <label>Contact NPS Received Date</label>
    <type>Date</type>
</CustomField>