Agentforce/force-app/main/default/objects/Contact/fields/Contact_NPS_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_NPS_Sent_Date__c</fullName>
    <description>AD-916 - Used as part of the NPS Survey Form</description>
    <label>Contact NPS Sent Date</label>
    <type>Date</type>
</CustomField>