Agentforce/force-app/main/default/objects/Contact/fields/ContactCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>ContactCaseSafeID__c</fullName>
    <description>Contact CaseSafeID</description>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactCaseSafeID</label>
    <type>Text</type>
</CustomField>