Agentforce/force-app/main/default/objects/Contact/fields/Count_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Tasks__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>