Agentforce/force-app/main/default/objects/Contact/fields/Create_New_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Enquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-967 - Used as the trigger point to generate a new Enquiry record</description>
    <label>Create New Enquiry</label>
    <type>Checkbox</type>
</CustomField>