Agentforce/force-app/main/default/objects/Contact/fields/Created_From_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Campaign__c</fullName>
    <label>Created From Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>