Agentforce/force-app/main/default/objects/Contact/fields/Creator_Country__c.field-meta.xml
<CustomField>
    <fullName>Creator_Country__c</fullName>
    <description>AD-7 The ability to see all Leads where the country is the same as my own</description>
    <label>Creator Country</label>
    <length>122</length>
    <type>Text</type>
</CustomField>