Agentforce/force-app/main/default/objects/Contact/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arthur McKay</fullName>
            </value>
            <value>
                <fullName>Catering Academy</fullName>
            </value>
            <value>
                <fullName>SugarCRM</fullName>
            </value>
            <value>
                <fullName>Legacy Atalian</fullName>
            </value>
            <value>
                <fullName>Legacy OCS</fullName>
            </value>
            <value>
                <fullName>Aktrion</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>