Agentforce/force-app/main/default/objects/Contact/fields/Eligible_for_CTPS_Checks__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_CTPS_Checks__c</fullName>
    <description>Defines if the phone number can be included within CTPS mass batch updates</description>
    <formula>IF(
    AND(
    MailingCountry = &apos;United Kingdom&apos;,
    Not_At_Company__c = FALSE,
    DoNotCall = FALSE
    ),
1,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for CTPS Checks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>