Agentforce/force-app/main/default/objects/Contact/fields/Email_Consent_Date_Resent__c.field-meta.xml
<CustomField>
    <fullName>Email_Consent_Date_Resent__c</fullName>
    <label>Email Consent Date Resent</label>
    <type>DateTime</type>
</CustomField>