Agentforce/force-app/main/default/objects/Contact/fields/Event_Sponsor_Interest__c.field-meta.xml
<CustomField>
    <fullName>Event_Sponsor_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used in marketing forms</inlineHelpText>
    <label>Event Sponsor Interest</label>
    <type>Checkbox</type>
</CustomField>