Agentforce/force-app/main/default/objects/Contact/fields/Event_Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Ticket_Type__c</fullName>
    <inlineHelpText>Used in marketing forms.</inlineHelpText>
    <label>Event Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Networking opportunity</fullName>
            </value>
            <value>
                <fullName>Evening dinner and networking</fullName>
            </value>
            <value>
                <fullName>Day and evening attendance</fullName>
            </value>
            <value>
                <fullName>Drinks package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>