Agentforce/force-app/main/default/objects/Contact/fields/Has_Email__c.field-meta.xml
<CustomField>
    <fullName>Has_Email__c</fullName>
    <description>Displays True if Email is populated - used by Conga</description>
    <formula>NOT(ISBLANK( Email ))</formula>
    <label>Has Email</label>
    <type>Checkbox</type>
</CustomField>