Agentforce/force-app/main/default/objects/Contact/fields/Hobbies_Info__c.field-meta.xml
<CustomField>
    <fullName>Hobbies_Info__c</fullName>
    <label>Hobbies Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>