Agentforce/force-app/main/default/objects/Contact/fields/Hobbies_Interests__c.field-meta.xml
<CustomField>
    <fullName>Hobbies_Interests__c</fullName>
    <label>Hobbies &amp; Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Industry Events</fullName>
            </value>
            <value>
                <fullName>Others – Please Specify</fullName>
            </value>
            <value>
                <fullName>Theatre &amp; Arts</fullName>
            </value>
            <value>
                <fullName>Concerts</fullName>
            </value>
            <value>
                <fullName>Charitable Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>