Agentforce/force-app/main/default/objects/Contact/fields/Hobbies_Interests_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Hobbies_Interests_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hobbies &amp; Interests Opt Out</label>
    <type>Checkbox</type>
</CustomField>