Agentforce/force-app/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify contacts are no longer in the business</description>
    <inlineHelpText>Check if the Contact is no longer at the business.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>