Agentforce/force-app/main/default/objects/Contact/fields/Last_NPS_Survey__c.field-meta.xml
<CustomField>
    <fullName>Last_NPS_Survey__c</fullName>
    <description>AD-368 - Stores the date when this Contact was last sent an NPS Survey</description>
    <label>Last NPS Survey</label>
    <type>Date</type>
</CustomField>