Agentforce/force-app/main/default/objects/Contact/fields/Latest_Perception__c.field-meta.xml
<CustomField>
    <fullName>Latest_Perception__c</fullName>
    <label>Latest Perception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detractor</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>Promoter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>