Agentforce/force-app/main/default/objects/Contact/fields/Latest_Perception_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Perception_Date__c</fullName>
    <label>Latest Perception Date</label>
    <type>Date</type>
</CustomField>