Agentforce/force-app/main/default/objects/Contact/fields/Latest_Perception_Source__c.field-meta.xml
<CustomField>
    <fullName>Latest_Perception_Source__c</fullName>
    <label>Latest Perception Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>