Agentforce/force-app/main/default/objects/Contact/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <description>AD-967 - Stores the Id of the Lead when a Contact record is generated via Lead Conversion</description>
    <label>Lead ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>