Agentforce/force-app/main/default/objects/Contact/fields/Marketing_triggered_contact_NPS__c.field-meta.xml
<CustomField>
    <fullName>Marketing_triggered_contact_NPS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-916: Used in Pardot for the NPS Survey Form functionality Automation Rule.</description>
    <label>Marketing triggered contact NPS</label>
    <type>Checkbox</type>
</CustomField>