Agentforce/force-app/main/default/objects/Contact/fields/Merge_LEGACY_OCS_ID__c.field-meta.xml
<CustomField>
    <fullName>Merge_LEGACY_OCS_ID__c</fullName>
    <label>Merge LEGACY OCS ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>