Agentforce/force-app/main/default/objects/Contact/fields/No_of_Active_Contracts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Active_Contracts__c</fullName>
    <description>Populated by DLRS. The number of Active Contracts that this Contact is key contact for.</description>
    <label># Active Contracts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>