Agentforce/force-app/main/default/objects/Contact/fields/No_of_Emails__c.field-meta.xml
<CustomField>
    <fullName>No_of_Emails__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated by DLRS</description>
    <label># Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>