Agentforce/force-app/main/default/objects/Contact/fields/No_of_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>No_of_Open_Opportunities__c</fullName>
    <description>Populated by DLRS. The number of Open Opportunities this Contact is associated to via Contact Roles.</description>
    <label># Open Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>