Agentforce/force-app/main/default/objects/Contact/fields/Not_At_Company__c.field-meta.xml
<CustomField>
    <fullName>Not_At_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not At Company</label>
    <type>Checkbox</type>
</CustomField>