Agentforce/force-app/main/default/objects/Contact/fields/NPS_Comment__c.field-meta.xml
<CustomField>
    <fullName>NPS_Comment__c</fullName>
    <label>NPS Comment</label>
    <type>TextArea</type>
</CustomField>