Agentforce/force-app/main/default/objects/Contact/fields/NPS_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>NPS_Due_Date__c</fullName>
    <description>AD-368 - Stores the date in which the next NPS survey is due</description>
    <formula>ADDMONTHS(Last_NPS_Survey__c ,6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Due Date</label>
    <type>Date</type>
</CustomField>