Agentforce/force-app/main/default/objects/Contact/fields/NPS_Survey_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>NPS_Survey_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPS Survey Opt Out</label>
    <type>Checkbox</type>
</CustomField>