Agentforce/force-app/main/default/objects/Contact/fields/OCS_Contact__c.field-meta.xml
<CustomField>
    <fullName>OCS_Contact__c</fullName>
    <description>E2E-172 - Denotes whether the contact is related to an OCS Account</description>
    <formula>Account.OCS_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OCS Contact</label>
    <type>Checkbox</type>
</CustomField>