Agentforce/force-app/main/default/objects/Contact/fields/Opted_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out_Date__c</fullName>
    <description>Date when the Contact opted out - mapped from Lead conversion</description>
    <label>Opted Out Date</label>
    <type>Date</type>
</CustomField>