Agentforce/force-app/main/default/objects/Contact/fields/Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Owner_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Active</label>
    <type>Checkbox</type>
</CustomField>