Agentforce/force-app/main/default/objects/Contact/fields/OwnerCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>OwnerCaseSafeID__c</fullName>
    <formula>Owner.CaseSafeID__c</formula>
    <label>OwnerCaseSafeID</label>
    <type>Text</type>
</CustomField>