Agentforce/force-app/main/default/objects/Contact/fields/Primary_Service__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service__c</fullName>
    <description>AD-967 - Stores the Primary Service Interest for this Contact. Used for Enquiry Generation</description>
    <label>Primary Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Family</valueSetName>
    </valueSet>
</CustomField>