Agentforce/force-app/main/default/objects/Contact/fields/Relationship_Map1__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Map1__c</fullName>
    <inlineHelpText>The name of the internal stakeholder that holds the strongest relationship with the most frequent interactions with this Contact.</inlineHelpText>
    <label>Relationship Map - 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>