Agentforce/force-app/main/default/objects/Contact/fields/Relationship_Map2__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Map2__c</fullName>
    <inlineHelpText>The name of the internal stakeholder that holds the second strongest relationship with the second most frequent interactions with this Contact.</inlineHelpText>
    <label>Relationship Map - 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>