Agentforce/force-app/main/default/objects/Contact/fields/Relationship_Map3__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Map3__c</fullName>
    <inlineHelpText>The name of the internal stakeholder that holds the third strongest relationship with the third most frequent interactions with this Contact.</inlineHelpText>
    <label>Relationship Map - 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>