Agentforce/force-app/main/default/objects/Contact/fields/Relationship_Score__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Score__c</fullName>
    <description>AD-341 - picklist values to identify the perceptive relationship score against a Contact</description>
    <label>Relationship Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>