Agentforce/force-app/main/default/objects/Contact/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Strategic/Board</fullName>
            </value>
            <value>
                <fullName>Tactical</fullName>
            </value>
            <value>
                <fullName>C-Suite Director</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>